...
      timestamp: Date.now(),
    })
  ),
  reverseGeocodeAsync: jest.fn(() =>
    Promise.resolve([
      {
        city: 'Chiang Mai',
        region: 'Chiang Mai',
        country: 'Thailand',
      },
    ])
  ),
}));
...
